--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "webpack",
+  "name": "webpack_dev",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,8 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "uglify-loader": "^1.3.0",
-    "url-loader": "^0.5.7"
-  }
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3"
+  },
+  "dependencies": {}
 }
