--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "jquery": "^3.1.1",
+    "moment": "^2.17.1",
     "node-sass": "^3.13.0",
+    "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-dom": "^15.4.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "uglify-loader": "^1.3.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.3"
+    "webpack": "^1.14.0"
   },
   "dependencies": {}
 }
