--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --open --content-base dist/",
-    "production" : "webpack --mode production",
-    "development" : "webpack --mode development"
+    "dll": "webpack --config=./config/webpack.dll.config.js",
+    "copy": "webpack --config ./config/webpack.config.copy.js",
+    "start:dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.dev.js",
+    "start:test": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.test.js",
+    "start:prod": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.prod.js",
+    "production": "cross-env NODE_ENV=production  webpack --config  ./config/webpack.config.prod.js --mode production",
+    "development": " cross-env NODE_ENV=development webpack --config  ./config/webpack.config.dev.js --mode development",
+    "lint": "eslint --ext .js,src"
   },
   "author": "",
   "license": "ISC",
@@ -14,22 +19,43 @@
     "autoprefixer": "^8.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.5",
     "css-loader": "^0.28.11",
+    "ejs-loader": "^0.3.1",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.1",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.21.0",
     "uglify-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.7.0",
+    "webpack": "^4.8.1",
     "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {}
 }
