--- a/package.json
+++ b/package.json
@@ -4,14 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dll": "webpack --config=./config/webpack.dll.config.js",
-    "copy": "webpack --config ./config/webpack.config.copy.js",
-    "start:dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.dev.js",
-    "start:test": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.test.js",
-    "start:prod": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.prod.js",
-    "production": "cross-env NODE_ENV=production  webpack --config  ./config/webpack.config.prod.js --mode production",
-    "development": " cross-env NODE_ENV=development webpack --config  ./config/webpack.config.dev.js --mode development",
-    "lint": "eslint --ext .js,src"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --progress --config ./config/webpack.config.js",
+    "build": "cross-env webpack --config  ./config/webpack.config.js --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +21,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.5",
     "css-loader": "^0.28.11",
+    "cssnano": "^4.1.8",
     "ejs-loader": "^0.3.1",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
@@ -40,8 +35,12 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-webpack-include-assets-plugin": "^1.0.6",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-inline-style-plugin": "^0.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
@@ -52,10 +51,22 @@
     "uglify-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
+    "vue": "^2.5.21",
+    "vue-loader": "^15.4.2",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserslist": {
+    "production": [
+      "last 4 version",
+      "ie >= 9"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version"
+    ]
+  }
 }
